# jenkins-mcp

./: .cursorignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.jenkins-mcp  Dockerfile.mcp-proxy  Dockerfile.proxy  LICENSE  PYPI_PUBLISHING.md  README-Docker.md  README.md  docker-compose.mcp.yml  docker-compose.yml  inspector-config.json  mcp-inspector-config.json  mcp.json  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
config/: README-diagnostic-config.md  README.md  config.example.json  diagnostic-parameters-guide.md  diagnostic-parameters-quick-reference.md  mcp-config.example.yml
examples/: http_streaming_example.md
jenkins_mcp_enterprise/: server.py
mcp_server/: cache_manager.py  cleanup_manager.py  config.py  config_factory.py  di_container.py  http_server.py  multi_jenkins_manager.py  server.py  tool_factory.py  vector_manager.py
mcp_server/diagnostic_config/: __init__.py  diagnostic_config.py
mcp_server/jenkins/: job_name_utils.py  subbuild_discoverer.py
mcp_server/tools/: diagnostics.py  ripgrep_tool.py
scripts/: mcp_http_proxy.py  run_ci_locally.sh  run_integration_tests.py  start_dev_environment.sh  test_http_streaming.py  validate_diagnostic_config.py
tests/: test_basic_validation.py  test_integration_real.py
tests/mcp_integration/: __init__.py  mcp_test_client.py  test_doubles.py  test_error_scenarios.py  test_infrastructure.py  test_performance.py  test_simple_validation.py  test_tool_scenarios.py
